<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo</string>
    <string name="action_settings">Settings</string>
    <string name="action_window">Window</string>
    <string name="menu_calendar">Calendar event</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_audio">Audio record</string>
    <string name="title_activity_memo_list">Memo list</string>
    <string name="title_activity_edit_memo">Edit memo</string>
    <string name="title_activity_calendar">New event</string>
    <string name="Memo">Memo</string>
    <string name="action_power">Enable call listener</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_attachment">Add attachment</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>
    <string name="action_clear">Clear</string>

    <string name="menu_delete">Delete</string>
    <string name="unknown_contact">Unknown</string>
    <string name="menu_image">Picture</string>
    <string name="dialog_delete_image_message">Delete image from this memo?</string>
    <string name="dialog_delete_image_title">Delete?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="memo_title_hint">Enter title</string>
    <string name="memo_body_hint">Enter memo</string>
    <string name="memo_title_empty">No title</string>

    <string name="date_format">yyyy/MM/dd</string>
    <string name="time_format">HH:mm</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>

    <string name="category_storage">Storage</string>
    <string name="pref_calendar_title">Calendar</string>
    <string name="pref_calendar_summary">Select calendar</string>
    <string name="pref_calendar_dialog_title">Select calendar</string>
    <string name="category_what">WHAT?</string>
    <string name="pref_title_title">Event title</string>
    <string name="pref_title_summary">Undefined event (created from Caller)</string>
    <string name="pref_title_dialog_title">Event title</string>
    <string name="pref_description_dialog_title">Event description</string>
    <string name="pref_description_summary">Automatic event via Caller</string>
    <string name="pref_description_title">Default description</string>
    <string name="category_when">WHEN?</string>
    <string name="category_options">OPTIONS</string>
    <string name="pref_reminder_title">Reminder</string>
    <string name="pref_reminder_summary_on">You will be reminded 15min before event</string>
    <string name="pref_reminder_summary_off">Reminder disabled</string>
    <string name="default_event_description">Event related to %1$s</string>

</resources>
