<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/category_storage">

        <ListPreference
            android:key="list_calendar"
            android:title="@string/pref_calendar_title"
            android:summary="@string/pref_calendar_summary"
            android:dialogTitle="@string/pref_calendar_dialog_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_what">

        <EditTextPreference
            android:key="event_title"
            android:title="@string/pref_title_title"
            android:summary="@string/pref_title_summary"
            android:dialogTitle="@string/pref_title_dialog_title" />

        <EditTextPreference
            android:key="event_description"
            android:title="@string/pref_description_title"
            android:summary="@string/pref_description_summary"
            android:dialogTitle="@string/pref_description_dialog_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_when">

        <company.memo.PreferenceDate
            android:key="event_date"
            android:title="@string/event_date" />

        <company.memo.PreferenceTime
            android:key="event_time"
            android:title="@string/event_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_options">

        <CheckBoxPreference
            android:key="event_reminder"
            android:title="@string/pref_reminder_title"
            android:summaryOn="@string/pref_reminder_summary_on"
            android:summaryOff="@string/pref_reminder_summary_off"/>

    </PreferenceCategory>
</PreferenceScreen>